--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>报刊订阅</title>
+    <!-- <link rel="shortcut icon" type="image/x-icon" href="https://sucai.suoluomei.cn/sucai_zs/images/20200425174801-1.png"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="./src/assets/img/book.png">
     <!-- <link rel="shortcut icon" href="./src/assets/img/wx.png"> -->
     <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
   </head>
